Added auth routes

--- a/config.env
+++ b/config.env
@@ -4,7 +4,10 @@ USERNAME=sami
 DATABASE=mongodb+srv://sami:<PASSWORD>@cluster0.zubt2.mongodb.net/mynode?retryWrites=true&w=majority
 DATABASE_PASSWORD=9Hr6p3YrgoKTCs8d
 
-EMAIL_USERNAME=32bdba5438a3dc
-EMAIL_PASSWORD=2d859f47427ea4
-EMAIL_HOST=smtp.mailtrap.io
-EMAIL_PORT=25
+JWT_SECRET=sensul-casniciei-decriptat-de-Timothy
+JWT_EXPIRES_IN=90d 
+
+EMAIL_USERNAME='0c0acd5d17df3b'
+EMAIL_PASSWORD='b4a06932befaa8'
+EMAIL_HOST='smtp.mailtrap.io'
+EMAIL_PORT='2525' 
