--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "learning node",
   "main": "app.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "build": "^0.1.4",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.13",
     "morgan": "^1.10.0",
     "node-fetch": "^3.0.0",
-    "nodemailer": "^6.7.0",
-    "package": "^1.0.1"
+    "nodemailer": "^6.7.2",
+    "package": "^1.0.1",
+    "slugify": "^1.6.5",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "eslint": "^8.1.0",
@@ -25,11 +29,14 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
+    "ndb": "^1.1.5",
     "prettier": "^2.4.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "Sami Dunca",
   "license": "ISC",
